RESOLVED FIXED22947
[Patch] Compile fix for QWebHistory (pendantic)
https://bugs.webkit.org/show_bug.cgi?id=22947
Summary [Patch] Compile fix for QWebHistory (pendantic)
Urs Wolfer
Reported 2008-12-20 03:52:19 PST
qwebhistory.h does not compile with the pendantic compiler flag. The attached patch fixes this issue.
Attachments
Patch to compile qwebhistory.h with pendantic comiler flag (882 bytes, patch)
2008-12-20 03:55 PST, Urs Wolfer
hausmann: review+
Urs Wolfer
Comment 1 2008-12-20 03:55:13 PST
Created attachment 26168 [details] Patch to compile qwebhistory.h with pendantic comiler flag
Simon Hausmann
Comment 2 2009-01-25 06:56:04 PST
Comment on attachment 26168 [details] Patch to compile qwebhistory.h with pendantic comiler flag Good catch
Simon Hausmann
Comment 3 2009-01-25 06:56:52 PST
Landed in r40223
Note You need to log in before you can comment on or make changes to this bug.