2008-12-20  Urs Wolfer  <uwolfer@kde.org>

Reviewed by Simon Hausmann.

        Fix: compile qwebhistory.h with pendantic comiler flag.

        https://bugs.webkit.org/show_bug.cgi?id=22947

git-svn-id: svn://svn.chromium.org/blink/trunk@40223 bbb929c8-8fbe-4397-9dbb-9b2b20218538