third_party/WebKit/WebKit/qt/Api/qwebhistory.h
@@ -33,7 +33,7 @@ class QWebPage;
 
 namespace WebCore {
     class FrameLoaderClientQt;
-};
+}
 
 class QWebHistoryItemPrivate;
 class QWEBKIT_EXPORT QWebHistoryItem
